add JobController
